# help-center-rag

./: .gitignore  CLAUDE.md  Justfile  PLAN.md  README-ENRICHMENT.md  README-QUERY.md  README.md  ZENML_PIPELINE.md  analyze_redundancy.py  app.py  db_inspect_document.py  db_list_documents.py  demo_enrichment.py  duplicate_remover.py  eslint.config.mjs  html2md.py  image_description_standalone.py  image_enrichment_demo.py  ls-icons  ls-non-icons  manual_evaluation.py  package.json  process_help_center.py  pyproject.toml  rag  run_help_center_pipeline.py  semantic_analyzer.py  show_enriched_chunks.py  smolvlm_image_description_demo.py  strip_markdown_media.py  test_chunking.md  test_help_center_pipeline.py  test_rag.py  test_sample.md
deprecated_scripts/: compare_image_descriptions.py  db_list_documents.py  demo_enrichment.py  image_description_demo.py  manual_evaluation.py  show_document_by_id.py  show_document_chunks.py
epic_rag/: __init__.py  __main__.py  zenml_setup.py
epic_rag/application/pipelines/: document_processing_pipeline.py  help_center_pipeline.py  orchestration_pipeline.py  query_evaluation_pipeline.py
epic_rag/application/use_cases/: answer_question.py  ingest_document.py  retrieve_context.py
epic_rag/domain/interfaces/: repositories.py
epic_rag/domain/models/: document.py  ident.py  retrieval.py
epic_rag/domain/repositories/: document_repository.py  vector_repository.py
epic_rag/domain/services/: chunking_service.py  contextual_enrichment_service.py  embedding_service.py  image_description_service.py  lexical_search_service.py  llm_service.py  rank_fusion_service.py  reranker_service.py  retrieval_service.py
epic_rag/infrastructure/: container.py  services.py
epic_rag/infrastructure/config/: __init__.py  settings.py
epic_rag/infrastructure/document_processing/: __init__.py  chunking_service.py
epic_rag/infrastructure/embedding/: cached_embedding_service.py  embedding_cache.py  (+4 more)
epic_rag/interfaces/: __init__.py
epic_rag/materializers/: document_chunk_materializer.py  document_materializer.py  embedded_chunk_materializer.py
epic_rag/pipelines/: __init__.py  feature_engineering.py
epic_rag/steps/: __init__.py  add_document_context.py  add_image_descriptions.py  chunk_document.py  convert_to_markdown.py  load_to_document_store.py  load_to_vector_db.py
help_rag/: __main__.py  zenml_setup.py
help_rag/application/: __init__.py
help_rag/infrastructure/: __init__.py
help_rag/materializers/: __init__.py  document_materializer.py  embedded_chunk_materializer.py
help_rag/pipelines/: feature_engineering.py
help_rag/steps/: __init__.py  add_document_context.py  add_image_descriptions.py  chunk_document.py  convert_to_markdown.py  load_to_document_store.py  load_to_vector_db.py
html2md/: __init__.py  converter.py  loaders.py
html2md/test/: __init__.py  test_converter.py  test_html2md.py  test_loaders.py
src/: config.ts  index.ts
src/scripts/: condense-markdown.ts  count-tokens.ts  json-to-markdown.ts  parallel-json-crawler.ts
test/: nested-list-test.html
test/samples/: email.md  faxing-setup.md  quote-results.md  renew-a-certificate.md  test_doc.md  vinlink-decoder-configuration.md
(+66 files in other folders)
