[project]
name = "epic-help"
version = "0.1.0"
description = "Epic Documentation RAG System using Anthropic's Contextual Retrieval methodology"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # HTML to Markdown conversion
    "beautifulsoup4>=4.13.3",
    "html2text>=2024.2.26",
    "markdown-it-py>=3.0.0",
    "markdownify>=1.1.0",
    # RAG System
    "rich>=13.9.4",
    "typer>=0.15.2",
    "zenml[server]>=0.75.0",
    "aiosqlite>=0.19.0",
    "qdrant-client>=1.7.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "openai>=1.6.0",
    "tiktoken>=0.5.0",
    "asyncio>=3.4.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "pyright>=1.1.396",
    "ruff>=0.11.0",
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
epic-rag = "epic_rag.interfaces.cli.main:app"
